2004-01-06 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (valShift): changed from 16 to 32 bit shift count,
	fixed warning
	* support/valdiag/tests/overflow.c: added
	* src/SDCCast.c (decorateType),
	* src/SDCCicode.c (geniCodeLeftShift): added promotion to int for
	LEFT_OP (left shift)

2004-01-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/lkmain.c: stack must be after data when option -Y is not used
	(default behaviour).

2004-01-06 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	A python script to validate compiler diagnostic messages. It can be
	used to verify that sdcc complains about bad c source code and
	gives a good location of the error.
	* support/valdiag/Makefile,
	* support/valdiag/valdiag.py,
	* support/valdiag/tests/*

2004-01-06 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCC.y (enum_specifier, enumerator_list, opt_assign_expr),
	* src/SDCCsymt.c (newEnumType),
	* src/SDCCsymt.h
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: fixed bug #871258 and some other unreported
	enum related bugs.
	* support/regression/tests/enum.c: added test for enum values that
	require at least 2 bytes of storage.

2004-01-06 Vangelis Rokas <vrokas@otenet.gr>

	* src/common.h: added ifndef/define/endif macros
	around the header file.
	Bug reported from Jesus Calvino-Fraga

2004-01-06 Bernhard Held <bernhard@bernhardheld.de>

	* sdcc.spec: updated
	* device/include/Makefile.in: don't install CVS directories
	* device/lib/Makefile.in: added removal of CVS directories after install
	* doc/Makefile: fixed install, added local_icons
	* sim/ucsim/gui.src/Makefile.in: fixed an old typo
	* src/mcs51/gen.c (genRightShift): fixed bug #870788
	* src/ds390/gen.c (genRightShift): fixed bug #870788
	* src/SDCCast.c (decorateType): fixed bug #870781

2004-01-06 Vangelis Rokas <vrokas@otenet.gr>

	PIC16 port related changes:
	* device.c: removed pic16_finalMapping and pic16_finalMappingSize,
	added variable stackPos,
