@@ -1,3 +1,8 @@
+2004-01-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
+
+	* as/mcs51/lkmain.c: Help about -Y option
+	* as/mcs51/lkarea.c: Fixed gcc warnings
+
 2004-01-06 Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/SDCCval.c (valShift): changed from 16 to 32 bit shift count,
